# neural_network

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt
examples/logic_gates/: CMakeLists.txt
examples/logic_gates/src/: main.cpp
examples/mnist_digit_recognition/: CMakeLists.txt
examples/mnist_digit_recognition/src/: main.cpp
include/tnn/: tnn.hpp
modules/: CMakeLists.txt
modules/tla/: CMakeLists.txt
modules/tla/include/tla/: tla.hpp
